@@ -3,13 +3,19 @@
 if __name__ == '__main__':
     import sys
     import os
-    parent_dir = os.path.split(os.path.split(os.path.abspath(__file__))[0])[0]
-    sys.path.insert(0, parent_dir)
+    pkg_dir = os.path.split(os.path.abspath(__file__))[0]
+    parent_dir, pkg_name = os.path.split(pkg_dir)
+    is_pygame_pkg = (pkg_name == 'tests' and
+                     os.path.split(parent_dir)[1] == 'pygame')
+    if not is_pygame_pkg:
+        sys.path.insert(0, parent_dir)
+else:
+    is_pygame_pkg = __name__.startswith('pygame.tests.')
 
-try:
-    from test.test_utils import test_not_implemented, unittest
-except:
+if is_pygame_pkg:
     from pygame.tests.test_utils import test_not_implemented, unittest
+else:
+    from test.test_utils import test_not_implemented, unittest
 import pygame
 
 ################################################################################
